--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,96 +9,293 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Rezume</title>
+    <title>Rostislav Pylypiv | Backend developer (Golang, Python, Django)</title>
 </head>
+
 <body>
+    <!--Hello! It`s nice to see you in my html-code!-->
     <div class="main">
         <div class="main-content">
-            <div>
-                <h2>Golang developer</h2>
-                <h1>Rostislav Pylypiv</h1>
-                <p>Hello! I have not too much expirience in IT, but computer science always was my hobby. 
-                    For a long time ago I selfstudied HTML, CSS, created sites for myself and friends with 
+            <div class="about">
+                <h1 class="about-name">Rostislav Pylypiv</h1>
+                <h2 class="about-position">Golang & Python developer</h2>
+                <!--<p class="about-desc">Hello! I have not too much expirience in IT, but computer science always was my
+                    hobby.
+                    For a long time ago I selfstudied HTML, CSS, created sites for myself and friends with
                     CMS and sites constructors, for some time I managed my own online store. And from January
-                     this year I started studying Python and Django on the advice of a friend-developer. After
-                      a while I started to study Golang and now I continue to deepen my knowledge.
-                I’m looking for an opportunity for my further development and self-realization. I want to enjoy 
-                my work and to feel useful.</p>
+                    this year I started studying Python and Django on the advice of a friend-developer. After
+                    a while I started to study Golang and now I continue to deepen my knowledge.
+                    I’m looking for an opportunity for my further development and self-realization. I want to enjoy
+                    my work and to feel useful.</p>-->
             </div>
-            <div>
-                <h3>Projects</h3>
-                <ol>
+            <div class="projects">
+                <!--PROJECTS-->
+                <h3 class="title">Projects</h3>
+                <ol class="project-item">
                     <li>
-                        <a href="https://github.com/rostis232/todo">Simple todo app</a>
-                        .........
-                        [Golang]
+                        <span class="project">
+                            <a href="https://github.com/rostis232/todo"
+                                class="project-link">https://github.com/rostis232/todo</a>
+                            ........................
+                            <span class="project-bracket">[</span>Golang<span class="project-bracket">]</span>
+                        </span>
                     </li>
                     <li>
-                        <a href="https://github.com/rostis232/3hourssite">Making site for 4 hours</a>
-                        .........
-                        [HTML, CSS, Golang]
+                        <span class="project">
+                            <a href="https://github.com/rostis232/3hourssite"
+                                class="project-link">https://github.com/rostis232/3hourssite</a>
+                            ...........
+                            <span class="project-bracket">[</span>HTML, CSS, Golang<span
+                                class="project-bracket">]</span>
+                        </span>
                     </li>
                     <li>
-                        More...
+                        <span class="project-link">
+                            More...
+                        </span>
                     </li>
                 </ol>
             </div>
+
+
+
             <div>
-                <h3>
+                <!--WORK EXPIRIENCE-->
+                <h3 class="title">
                     Work expirience
                 </h3>
+                <!--MANAGER-->
                 <div>
-                    <h4>
-                        Prosecutor | Zaporizhzhja region Prosecutor`s office
+                    <h4 class="position-title">
+                        1. Manager, <span class="position-company">Resource-Invest, LLC</span>
                     </h4>
-                    <h5>
-                        2011 - 2020
+                    <h5 class="work-period">
+                        2005, 2006
+                        <span class="vert">|</span>
+                        Zaporizhzhja
                     </h5>
-                    <ul>
-                        <li>текст 1</li>
-                        <li>text 2</li>
-                        <li>text3</li>
-                        <li>text4</li>
-                    </ul>
+                    <p>
+                        My job was to find clients and assist them in arranging contracts for the purchase of shares.
+                    </p>
+
 
                 </div>
+
+                <!--MODERATOR-->
                 <div>
-                    <h4>Deputy Director | Public Service</h4>
-                    <h5>2021 - Now</h5>
-                    <ul>
-                        <li>текст 1</li>
-                        <li>text 2</li>
-                        <li>text3</li>
-                        <li>text4</li>
-                    </ul>
+                    <h4 class="position-title">
+                        2. Moderator, <span class="position-company">4pda.info</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2006 - 2008
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                    <p>
+                        In this period, I began to get acquainted with Internet technologies: first CMS DLE, later WP,
+                        ModX. I started to study on my own HTML & CSS. From intresting expirience, I moved site from DLE
+                        to ModX with saving disign and functionality.
+                    </p>
+
 
                 </div>
+
+                <!--MAKLER-->
                 <div>
-                    <!--Third work place is here-->
-                    <h4>Back-end developer</h4>
-                    <h5>2022 - Now</h5>
-                    <ul>
-                        <li>Golang</li>
-                        <li>Python</li>
-                        <li>Django</li>
-                    </ul>
+                    <h4 class="position-title">
+                        3. Manager, video/photo operator, video editor, copywriter, <span
+                            class="position-company">Makler.ua</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2008
+                        <span class="vert">|</span>
+                        Kharkiv
+                    </h5>
+                    <p>
+                        My job was to find clients, make photo, video, videoclips and write description of real estate.
+                    </p>
 
                 </div>
+
+                <!---PROSECUTOR-->
+                <div>
+                    <h4 class="position-title">
+                        4. Prosecutor, <span class="position-company">Zaporizhzhja region Prosecutor`s office</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2011 - 2020
+                        <span class="vert">|</span>
+                        Zaporizhzhja
+                    </h5>
+                    <p>
+                        Gained experience in stressful situations, with large amounts of data. During my work I learned to find ways to communicate in different situations.
+                    </p>
+
+                </div>
+
+                <!--DETSKIJMIR-->
+                <div>
+                    <h4 class="position-title">
+                        5. Online store owner, <span class="position-company">detskijmir.com.ua</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2021
+                        <span class="vert">|</span>
+                        Kharkiv
+                    </h5>
+                    <p>
+                        I created and also managed the administration, content and promotion of my own online store. In
+                        this period I learned SEO & SMM.
+                    </p>
+
+                </div>
+
+                <!--APK-->
+                <div>
+                    <h4 class="position-title">
+                        6. Deputy Director,
+                        <span class="position-company">Department of agricultural development</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2021
+                        <span class="vert">|</span>
+                        Zaporizhzhja
+                    </h5>
+                    <p>
+                        This was my first leadership experience. I organized the work of my subordinates, coordinated
+                        the work of many other structures in the region and the country, organized and participated in
+                        events with foreign investors and international funds. My work was aimed at creating and solving
+                        the region's problems.
+                    </p>
+
+                </div>
+                <!--Cadastre-->
+                <div>
+                    <h4 class="position-title">
+                        7. Deputy Director,
+                        <span class="position-company">State Service for Geodesy, Cartography and Cadastre</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2021 - Now
+                        <span class="vert">|</span>
+                        Zaporizhzhja
+                    </h5>
+                    <p>
+                        The work required quick training and solving non-standard problems. When I started work in December 2021, the work plan for the year was only 1/3 completed. In addition, the staff was only 50% full. Nevertheless, thanks to the effort I put in, the plan was fully implemented in less than a month.
+                    </p>
+
+                </div>
+
             </div>
             <div>
-                <!--My Education is here-->
-                <h3>
+                <!--EDUCATION-->
+                <h3 class="title">
                     Education
                 </h3>
-                <h4>
-                    Yaroslav Mudryi National Law University
-                </h4>
-                <h5>2006 - 2011</h5>
-                <h5>Master of Law</h5>
+                <!--NLAU-->
+                <div>
+                    <h4 class="position-title">
+                        Master of Law,
+                        <span class="position-company">Yaroslav Mudryi National Law University</span>
+                    </h4>
+                    <!--<h4>
+
+                        <span class="education-company">Yaroslav Mudryi National Law University</span>
+                    </h4>
+                    <h5 class="degree">Master of Law</h5>-->
+                    <h5 class="learn-period">2006 - 2011
+                        <span class="vert">|</span>
+                        Kharkiv
+                    </h5>
+                    <p>
+                        During my studies I actively used computer technologies, took a prize in the University Olympics
+                        of Informatics. I learned that you cannot know everything, but you have to be able to quickly
+                        find the information you need.
+                    </p>
+                </div>
+
+
+                <!--Python-->
+                <div>
+                    <h4 class="position-title">
+                        Python Programming,
+                        <span class="position-company">Stepik.org & Bioinformatics Institute</span>
+                    </h4>
+                    <h5 class="learn-period">Jan 2022
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                </div>
+
+                <!--Grass Business-->
+                <div>
+                    <h4 class="position-title">
+                        Golang Programming,
+                        <span class="position-company">Grass Business Labs</span>
+                    </h4>
+                    <h5 class="learn-period">May - Jun 2022
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                </div>
+
+                
+
+                <!--Golang-->
+                <div>
+                    <h4 class="position-title">
+                        Golang Programming,
+                        <span class="position-company">Stepik.org</span>
+                    </h4>
+                    <h5 class="learn-period">Jun 2022
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                </div>
+
+                <!--ITVDN Git Basics-->
+                <div>
+                    <h4 class="position-title">
+                        Git Basics,
+                        <span class="position-company">ITVDN.com</span>
+                    </h4>
+                    <h5 class="learn-period">Jun 2022
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                </div>
+
+                <!--EPAM-->
+                <div>
+                    <h4 class="position-title">
+                        IT Fundamentals for Ukrainian Switchers,
+                        <span class="position-company">EPAM UpSkill</span>
+                    </h4>
+                    <!--<h4>
+                        <span class="education-company">EPAM UpSkill</span>
+                    </h4>-->
+                    <h5 class="learn-period">Apr - Jul 2022
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                    <!--<h5 class="degree">IT Fundamentals for Ukrainian Switchers</h5>-->
+                    <ul class="work-item">
+                        <li>Basics of Computer Science</li>
+                        <li>Basics of Programming</li>
+                        <li>Version Control with Git</li>
+                        <li>Math for IT</li>
+                        <li>Data & Analytics. Introduction to SQL</li>
+                        <li>Software Development Methodologies</li>
+                        <li>Front End Basics</li>
+                        <li>Cloud Overview</li>
+                    </ul>
+                </div>
+
 
             </div>
 
         </div>
+        <!--SIDEBAR-->
         <aside class="sidebar">
             <img src="img/photo.jpg" alt="user photo" class="photo">
             <div class="contacts">
@@ -105,17 +303,18 @@
                 <div>
                     <p>
                         <span class="contact-type">
-                            C: 
+                            Vodafone:
                         </span>
                         <a href="tel:+380504231129" class="contact-link">+380504231129</a>
+                        <br>
                         <span class="contact-type">
-                            
+                            Kyivstar:
                         </span>
                         <a href="tel:+380676176088" class="contact-link">+380676176088</a>
-                    </p>
-                    <p>
-                        <span class="contact-type">E: </span>
-                        <a href="mailto:rostislav.pylypiv@gmail.com" class="contact-link">rostislav.pylypiv@gmail.com</a>
+                        <br>
+                        <span class="contact-type">E-mail: </span>
+                        <a href="mailto:rostislav.pylypiv@gmail.com"
+                            class="contact-link">rostislav.pylypiv@gmail.com</a>
                     </p>
                 </div>
             </div>
@@ -123,31 +322,28 @@
                 <h3 class="sidebartitle">Tech skills</h3>
                 <ul class="techskills-list">
                     <li><span class="tech-skills-text">
-                        Golang</span>
+                            Golang</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        Python</span>
+                            Python & Django</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        Django</span>
+                            Git</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        Git</span>
+                            SQL</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        SQL</span>
+                            Linux</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        Linux</span>
+                            Postman</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        Postman</span>
+                            Docker</span>
                     </li>
                     <li><span class="tech-skills-text">
-                        Docker</span>
-                    </li>
-                    <li><span class="tech-skills-text">
-                        HTML & CSS</span>
+                            HTML, CSS & JS (basics)</span>
                     </li>
                 </ul>
             </div>
@@ -156,16 +352,34 @@
                 <h3 class="sidebartitle">Soft skills</h3>
                 <ul class="softskills-list">
                     <li><span class="soft-skills-text">
-                        Scrum</span>
+                            Stress-resistance</span>
                     </li>
                     <li><span class="soft-skills-text">
-                        Agile</span>
+                            Non-conflict</span>
                     </li>
                     <li><span class="soft-skills-text">
-                        GDT</span>
+                        Responsible</span>
                     </li>
                     <li><span class="soft-skills-text">
-                        Teamwork</span>
+                        Logical thinking</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="langs">
+                <!--Languages-->
+                <h3 class="sidebartitle">Languages</h3>
+                <ul class="softskills-list">
+                    <li><span class="soft-skills-text">
+                            English - B1</span>
+                    </li>
+                    <li><span class="soft-skills-text">
+                            German - A2</span>
+                    </li>
+                    <li><span class="soft-skills-text">
+                            Ukrainian - native</span>
+                    </li>
+                    <li><span class="soft-skills-text">
+                            Russian - native</span>
                     </li>
                 </ul>
             </div>
@@ -173,4 +387,5 @@
         </aside>
     </div>
 </body>
+
 </html>
