Upadated projects and work experience

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="main-content">
             <div class="about">
                 <h1 class="about-name">Rostislav Pylypiv</h1>
-                <h2 class="about-position">Golang & Python developer</h2>
+                <h2 class="about-position">Golang developer</h2>
                 <!--<p class="about-desc">Hello! I have not too much expirience in IT, but computer science always was my
                     hobby.
                     For a long time ago I selfstudied HTML, CSS, created sites for myself and friends with
@@ -43,15 +43,14 @@
                     <li>
                         <span class="project">
                             <a href="https://github.com/rostis232/3hourssite"
-                                class="project-link">https://github.com/rostis232/3hourssite</a>
+                                class="project-link">https://github.com/rostis232/traineeEVOFintech</a>
                             ...........
-                            <span class="project-bracket">[</span>HTML, CSS, Golang<span
-                                class="project-bracket">]</span>
+                            <span class="project-bracket">[</span>Golang<span class="project-bracket">]</span>
                         </span>
                     </li>
                     <li>
-                        <span class="project-link">
-                            More...
+                        <span class="project">
+                            <a href="https://github.com/rostis232" class="project-link">More...</a>
                         </span>
                     </li>
                 </ol>
@@ -64,96 +63,30 @@
                 <h3 class="title">
                     Work expirience
                 </h3>
-                <!--MANAGER-->
+
+                <!--Cadastre-->
                 <div>
                     <h4 class="position-title">
-                        1. Manager, <span class="position-company">Resource-Invest, LLC</span>
+                        1. Deputy Director,
+                        <span class="position-company">State Service for Geodesy, Cartography and Cadastre</span>
                     </h4>
                     <h5 class="work-period">
-                        2005, 2006
+                        2021 - Now
                         <span class="vert">|</span>
                         Zaporizhzhja
                     </h5>
                     <p>
-                        My job was to find clients and assist them in arranging contracts for the purchase of shares.
+                        The work required quick training and solving non-standard problems. When I started work in
+                        December 2021, the work plan for the year was only 1/3 completed. In addition, the staff was
+                        only 50% full. Nevertheless, thanks to the effort I put in, the plan was fully implemented in
+                        less than a month.
                     </p>
-
-
-                </div>
-
-                <!--MODERATOR-->
-                <div>
-                    <h4 class="position-title">
-                        2. Moderator, <span class="position-company">4pda.info</span>
-                    </h4>
-                    <h5 class="work-period">
-                        2006 - 2008
-                        <span class="vert">|</span>
-                        remotely
-                    </h5>
-                    <p>
-                        In this period, I began to get acquainted with Internet technologies: first CMS DLE, later WP,
-                        ModX. I started to study on my own HTML & CSS. From intresting expirience, I moved site from DLE
-                        to ModX with saving disign and functionality.
-                    </p>
-
-
-                </div>
-
-                <!--MAKLER-->
-                <div>
-                    <h4 class="position-title">
-                        3. Manager, video/photo operator, video editor, copywriter, <span
-                            class="position-company">Makler.ua</span>
-                    </h4>
-                    <h5 class="work-period">
-                        2008
-                        <span class="vert">|</span>
-                        Kharkiv
-                    </h5>
-                    <p>
-                        My job was to find clients, make photo, video, videoclips and write description of real estate.
-                    </p>
-
-                </div>
-
-                <!---PROSECUTOR-->
-                <div>
-                    <h4 class="position-title">
-                        4. Prosecutor, <span class="position-company">Zaporizhzhja region Prosecutor`s office</span>
-                    </h4>
-                    <h5 class="work-period">
-                        2011 - 2020
-                        <span class="vert">|</span>
-                        Zaporizhzhja
-                    </h5>
-                    <p>
-                        Gained experience in stressful situations, with large amounts of data. During my work I learned to find ways to communicate in different situations.
-                    </p>
-
-                </div>
-
-                <!--DETSKIJMIR-->
-                <div>
-                    <h4 class="position-title">
-                        5. Online store owner, <span class="position-company">detskijmir.com.ua</span>
-                    </h4>
-                    <h5 class="work-period">
-                        2021
-                        <span class="vert">|</span>
-                        Kharkiv
-                    </h5>
-                    <p>
-                        I created and also managed the administration, content and promotion of my own online store. In
-                        this period I learned SEO & SMM.
-                    </p>
-
                 </div>
 
                 <!--APK-->
                 <div>
                     <h4 class="position-title">
-                        6. Deputy Director,
+                        2. Deputy Director,
                         <span class="position-company">Department of agricultural development</span>
                     </h4>
                     <h5 class="work-period">
@@ -167,23 +100,86 @@
                         events with foreign investors and international funds. My work was aimed at creating and solving
                         the region's problems.
                     </p>
-
                 </div>
-                <!--Cadastre-->
+
+                <!--DETSKIJMIR-->
                 <div>
                     <h4 class="position-title">
-                        7. Deputy Director,
-                        <span class="position-company">State Service for Geodesy, Cartography and Cadastre</span>
+                        3. Online store owner, <span class="position-company">detskijmir.com.ua</span>
                     </h4>
                     <h5 class="work-period">
-                        2021 - Now
+                        2021
+                        <span class="vert">|</span>
+                        Kharkiv
+                    </h5>
+                    <p>
+                        I created and also managed the administration, content and promotion of my own online store. In
+                        this period I learned SEO & SMM.
+                    </p>
+                </div>
+
+                <!---PROSECUTOR-->
+                <div>
+                    <h4 class="position-title">
+                        4. Prosecutor, <span class="position-company">Zaporizhzhja region Prosecutor`s office</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2011 - 2020
                         <span class="vert">|</span>
                         Zaporizhzhja
                     </h5>
                     <p>
-                        The work required quick training and solving non-standard problems. When I started work in December 2021, the work plan for the year was only 1/3 completed. In addition, the staff was only 50% full. Nevertheless, thanks to the effort I put in, the plan was fully implemented in less than a month.
+                        Gained experience in stressful situations, with large amounts of data. During my work I learned
+                        to find ways to communicate in different situations.
                     </p>
+                </div>
 
+                <!--MAKLER-->
+                <div>
+                    <h4 class="position-title">
+                        5. Manager, video/photo operator, video editor, copywriter, <span
+                            class="position-company">Makler.ua</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2008
+                        <span class="vert">|</span>
+                        Kharkiv
+                    </h5>
+                    <p>
+                        My job was to find clients, make photo, video, videoclips and write description of real estate.
+                    </p>
+                </div>
+
+                <!--MODERATOR-->
+                <div>
+                    <h4 class="position-title">
+                        6. Moderator, <span class="position-company">4pda.info</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2006 - 2008
+                        <span class="vert">|</span>
+                        remotely
+                    </h5>
+                    <p>
+                        In this period, I began to get acquainted with Internet technologies: first CMS DLE, later WP,
+                        ModX. I started to study on my own HTML & CSS. From intresting expirience, I moved site from DLE
+                        to ModX with saving disign and functionality.
+                    </p>
+                </div>
+
+                <!--MANAGER-->
+                <div>
+                    <h4 class="position-title">
+                        7. Manager, <span class="position-company">Resource-Invest, LLC</span>
+                    </h4>
+                    <h5 class="work-period">
+                        2005, 2006
+                        <span class="vert">|</span>
+                        Zaporizhzhja
+                    </h5>
+                    <p>
+                        My job was to find clients and assist them in arranging contracts for the purchase of shares.
+                    </p>
                 </div>
 
             </div>
@@ -214,6 +210,9 @@
                     </p>
                 </div>
 
+                <h3 class="title">
+                    Courses
+                </h3>
 
                 <!--Python-->
                 <div>
@@ -238,8 +237,6 @@
                         remotely
                     </h5>
                 </div>
-
-                
 
                 <!--Golang-->
                 <div>
@@ -358,10 +355,10 @@
                             Non-conflict</span>
                     </li>
                     <li><span class="soft-skills-text">
-                        Responsible</span>
+                            Responsible</span>
                     </li>
                     <li><span class="soft-skills-text">
-                        Logical thinking</span>
+                            Logical thinking</span>
                     </li>
                 </ul>
             </div>
